# ComfyUI_FMJ_LLM

./: README.md  __init__.py  install.json  ollama_manager.py  ollama_prompt.py  ollama_unload.py  ollama_unload_models.py  ollama_vision.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
csv/: LTX-Video.csv  Zimage.csv  Zimagestructure.csv  add image.csv  album.csv  character.csv  emptycsv.txt  enhancer.csv  exemple.txt  illustration_bandes_dessinees.csv  photo.csv  pink.csv  qwen_edit.csv  qwen_edit_camera.csv  qwen_edit_next_scene.csv  qwen_edit_relight.csv  random.csv  surrealism-1.csv  surrealism.csv
csvv/: art_style.csv  characters.csv  cyberpunk.csv  detailed.csv  lighting.csv  objects.csv  simple.csv
example_workflows/: FMJ LLM_1.0.9.json  FMJ_LLM_1.0.6.json
wf/: FMJ_LLM_1.0.json  LLM.json
